# node_edge_localizer

./: .travis.yml  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  package.xml
config/: node_edge_map.rviz
include/node_edge_localizer/: calculation.h  distance_map.h  kdtree.h  localizer.h  node_edge_localizer.h  node_edge_map_management.h  node_edge_particle.h
launch/: localizer.launch  node_edge_localizer.launch
src/: calculation.cpp  distance_map.cpp  localizer.cpp  localizer_node.cpp  node_edge_localizer.cpp  node_edge_map_management.cpp  node_edge_particle.cpp
test/: CMakeLists.txt  node_edge_localizer.test  node_edge_localizer_test.cpp
test/src/: localization_test.cpp  node_edge_localizer_test.cpp  observation_test.cpp  odom_sub_test.cpp
test/test/: localization.test  node_edge_localizer.test  observation.test  odom_sub.test
