<?xml version="1.0"?>
<package format="2">
  <name>node_edge_localizer</name>
  <version>0.0.0</version>
  <description>The node_edge_localizer package</description>

  <maintainer email="amslab@meiji.ac.jp">amsl</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>amsl_navigation_msgs</depend>
  <depend>amsl_navigation_managers</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>cmake_modules</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
